edit allowed origin